dropshot/tests/fail/bad_trait_only4.stderr
error: API trait `MyApi` does not have associated type `Context`
       (this type specifies the shared context for endpoints)
 --> tests/fail/bad_trait_only4.rs:8:7
  |
8 | trait MyApi {}
  |       ^^^^^
